ST5AS-6 Default query results to use head for commit
